[gd_scene load_steps=16 format=3 uid="uid://depnljm0j32df"]

[ext_resource type="Script" path="res://Scripts/Enemies/En_Necro/N_Fire.gd" id="1_npyka"]
[ext_resource type="Texture2D" uid="uid://d4hod85v62jm4" path="res://Sprites/Effects/Flame.png" id="2_ailtb"]
[ext_resource type="Texture2D" uid="uid://bx6v3xo8gvwtt" path="res://Sprites/Environment/light.png" id="3_uqt5f"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l1ua3"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_dmkrb"]
offsets = PackedFloat32Array(0, 0.0491071, 0.90625, 0.959821, 1)
colors = PackedColorArray(0.996078, 0.619608, 0.462745, 0, 1, 0.988235, 0.25098, 1, 0.905882, 0.219608, 0, 1, 0.94902, 0.572549, 0.45098, 0.4, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pi40e"]
gradient = SubResource("Gradient_dmkrb")
width = 100

[sub_resource type="Curve" id="Curve_snuvs"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.980159, 0.103821), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cyw7d"]
curve = SubResource("Curve_snuvs")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sod30"]
resource_local_to_scene = true
particle_flag_disable_z = true
angle_max = 720.0
direction = Vector3(0, -1, 0)
spread = 25.0
initial_velocity_min = 20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.1
scale_curve = SubResource("CurveTexture_cyw7d")
color_ramp = SubResource("GradientTexture1D_pi40e")

[sub_resource type="Gradient" id="Gradient_qvy18"]
offsets = PackedFloat32Array(0, 0.586957, 0.634783, 1)
colors = PackedColorArray(1, 1, 1, 0, 0.151276, 0.151276, 0.151276, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fucjd"]
gradient = SubResource("Gradient_qvy18")

[sub_resource type="Curve" id="Curve_pibym"]
_data = [Vector2(0, 0.255645), 0.0, 0.0, 0, 0, Vector2(1, 0.48629), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cl0l6"]
curve = SubResource("Curve_pibym")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j8c53"]
particle_flag_disable_z = true
angle_max = 720.0
direction = Vector3(0, -1, 0)
spread = 25.0
initial_velocity_min = 20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
scale_curve = SubResource("CurveTexture_cl0l6")
color = Color(0.627451, 0.627451, 0.627451, 0.847059)
color_ramp = SubResource("GradientTexture1D_fucjd")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xjld5"]
radius = 7.0
height = 20.0

[node name="Fire" type="Node2D"]
script = ExtResource("1_npyka")

[node name="Flame" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_l1ua3")
process_material = SubResource("ParticleProcessMaterial_sod30")
texture = ExtResource("2_ailtb")
explosiveness = 0.1
randomness = 0.5

[node name="Smoke" type="GPUParticles2D" parent="Flame"]
amount = 12
process_material = SubResource("ParticleProcessMaterial_j8c53")
texture = ExtResource("2_ailtb")
lifetime = 1.25
speed_scale = 0.5
explosiveness = 0.1
randomness = 0.5

[node name="Area" type="Area2D" parent="."]
collision_layer = 16
metadata/fire = 25

[node name="Collider" type="CollisionShape2D" parent="Area"]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_xjld5")

[node name="Light" type="PointLight2D" parent="."]
color = Color(1, 1, 0.411765, 0.988235)
energy = 0.3
texture = ExtResource("3_uqt5f")
texture_scale = 0.2

[node name="Timer" type="Timer" parent="."]

[node name="Timer_2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_2" to="." method="_on_timer_2_timeout"]
